going back and forth

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,3 +52,16 @@ h3 {
   font-size: 1.6rem;
   color: #777;
 }
+
+// 
+// button.primary {
+//   border: none;
+//   color: #fff;
+//   background: rgba(11, 193, 182, 1);
+// }
+//
+// button.secondary {
+//   border: none;
+//   background: rgba(255, 20, 148, 1);
+//   color: #fff;
+// }
