--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,3 @@
-
 input, select, button {
   margin: 0 2px;
   height: 28px !important;
@@ -69,14 +68,18 @@ hr {
 // }
 
 //
-// button.primary {
-//   border: none;
-//   color: #fff;
-//   background: rgba(11, 193, 182, 1);
-// }
-//
-// button.secondary {
-//   border: none;
-//   background: rgba(255, 20, 148, 1);
-//   color: #fff;
-// }
+button.primary {
+  border: none;
+  color: #fff;
+  background: #0a9;
+}
+
+button.secondary {
+  border: none;
+  background: #999;
+  color: #fff;
+}
+
+.pointer:hover {
+  cursor: pointer;
+}
