--- a/src/styles/skeleton.css
+++ b/src/styles/skeleton.css
@@ -322,11 +322,11 @@ pre > code {
 
 /* Tables
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-th,
+
 td {
   padding: 12px 15px;
   text-align: left;
-  border-bottom: 1px solid #E1E1E1; }
+  border-top: 1px solid #E1E1E1; }
 th:first-child,
 td:first-child {
   padding-left: 0; }
