--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,9 @@
 html {
-  font-size: 100%;
+  font-size: 16px;
+}
+
+body {
+  margin: 0;
 }
 
 input, select, button {
@@ -32,7 +36,13 @@ button[disabled="disabled"] {
 }
 
 button {
-  padding: 0 20px;
+  padding: 3px 10px;
+}
+
+@media (max-width: 700px) {
+  button {
+	padding: 2px 8px;
+  }  
 }
 
 tt {
